Added the README file.

--- a/src/TetrisAppletViewer.html
+++ b/src/TetrisAppletViewer.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <resources>
-      <java version="1.5+"/>
+      <java version="1.6"/>
       <jar href="/home/blueowl/Desktop/TetrisClassique/TetrisApplet.jar"/>
     </resources>
   </head>
@@ -15,23 +15,3 @@
     </applet-desc>
   </body>
 </html>
-
-<!--
-    <script type="text/javascript">
-      document.addEventListener("DOMContentLoaded", function(event) { 
-        console.log("hello");
-        document.getElementsByTagName('applet')[0].focus();
-      }, false);
-    </script>
-
-    <applet
-      archive="/home/blueowl/Desktop/TetrisClassique/TetrisApplet.jar"
-      code="TetrisGame.class"
-      width=500
-      height=700>
-    </applet>
-
-  <script type="text/javascript">
-      
-    </script>
--->
